--- a/Coat Trick 2.1/carrinho.html
+++ b/Coat Trick 2.1/carrinho.html
@@ -51,7 +51,7 @@
                 </ul>
                 <form class="d-flex">                                    
                     <a href="sobre.html">
-                    <img id="carrinho"  href="sobre.html" src="img/shopping-bag.png" >
+                    <img id="carrinho"  href="carrinho.html" src="img/shopping-bag.png" >
                     </a>                       
                     <button type="button" class="btn btn-outline-dark" href="#" data-bs-toggle="modal"
                     data-bs-target="#staticBackdrop1">Entrar
@@ -76,13 +76,52 @@
             <h1 class="" style="margin-left:10%;">Meu Carrinho</h1>
             <div class="list-group" style="margin: 15px;">
                 <label class="list-group-item">
-                    
-                  <input class="form-check-input me-1" type="checkbox" value="">
-                  First checkbox
+                <div class="row row-cols-auto">
+                  <div class="col">
+                  <input class="form-check-input me-1" type="checkbox" value="" >
+                </div>
+                <div class="row" style="width: 1200px;">
+                  <div class="card mb-3" style="">
+                    <div class="row">
+                      <div class="col-md-3">
+                        <img src="https://http2.mlstatic.com/D_NQ_NP_679505-MLB50905241226_072022-W.webp" class="img-fluid rounded-start" alt="..." style="width: 162px; height: 227px;">
+                      </div>
+                      <div class="col-md-8" style="">
+                        <div class="card-body">
+                          <h2 class="card-title">Corta-vento Masculino</h2>
+                          <p class="card-text"></p>
+                          <h1>R$179<sup>90</sup></h1>   
+                          <p class="card-text"><small class="text-muted">Tamanho P</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                </div>
                 </label>
                 <label class="list-group-item">
-                  <input class="form-check-input me-1" type="checkbox" value="">
-                  Second checkbox
+                    <div class="row row-cols-auto">
+                        <div class="col">
+                        <input class="form-check-input me-1" type="checkbox" value="" >
+                      </div>
+                      <div class="row" style="width: 1200px;">
+                        <div class="card mb-3" style="">
+                          <div class="row">
+                            <div class="col-md-3">
+                              <img src="https://http2.mlstatic.com/D_NQ_NP_679505-MLB50905241226_072022-W.webp" class="img-fluid rounded-start" alt="..." style="width: 162px; height: 227px;">
+                            </div>
+                            <div class="col-md-8" style="">
+                              <div class="card-body">
+                                <h2 class="card-title">Corta-vento Masculino</h2>
+                                <p class="card-text"></p>
+                                <h1>R$179<sup>90</sup></h1>   
+                                <p class="card-text"><small class="text-muted">Tamanho P</small></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      </div>
                 </label>
                 <label class="list-group-item">
                   <input class="form-check-input me-1" type="checkbox" value="">
