--- a/Coat Trick 2.1/sobre.html
+++ b/Coat Trick 2.1/sobre.html
@@ -51,7 +51,7 @@
                 </ul>
                 <form class="d-flex">                                    
                     <a href="sobre.html">
-                    <img id="carrinho"  href="sobre.html" src="img/shopping-bag.png" >
+                    <img id="carrinho"  href="carrinho.html" src="img/shopping-bag.png" >
                     </a>                       
                     <button type="button" class="btn btn-outline-dark" href="#" data-bs-toggle="modal"
                     data-bs-target="#staticBackdrop1">Entrar
