--- a/Coat Trick 2.1/sobre.html
+++ b/Coat Trick 2.1/sobre.html
@@ -81,10 +81,13 @@
                 alt="..." style="width: 300px; margin-top: 40px; margin-left: 20px;">
             </div>
               <div class="col-md-8">
-                <div class="card-body" style="margin-top: 50px; margin-left: 50px;">
-                  <h1 class="card-title">O que é a Coat Trick</h1>
-                    <p>Não é só no verão que surgem as maiores tendências de moda. Durante o outono e inverno, várias criações ganham os holofotes, sejam novidades ou releituras de um modismo já existente. Com certeza, você já usou alguma peça ou estampa e se perguntou como ela foi criada, e em termos de roupas de frio como jaquetas, casacos ou blusas, uma peça está cada vez mais presente e, por isso, muita gente quer saber a origem dela.Estamos falando das peças corta vento ou windbreaker. Com textura versátil e diferenciada, esse tipo de roupa que produzimos na Coat Trick</p>
+              
+                <div class= "coattrick">
+               <div class="card-body" style="margin-top: 50px; margin: px;">
+                  <h1 class="card-title">O que é a Coat Trick?</h1>
+                    <p >Não é só no verão que surgem as maiores tendências de moda. Durante o outono e inverno, várias criações ganham os holofotes, sejam novidades ou releituras de um modismo já existente. Com certeza, você já usou alguma peça ou estampa e se perguntou como ela foi criada, e em termos de roupas de frio como jaquetas, casacos ou blusas, uma peça está cada vez mais presente e, por isso, muita gente quer saber a origem dela.Estamos falando das peças corta vento ou windbreaker. Com textura versátil e diferenciada, esse tipo de roupa que produzimos na Coat Trick</p>
                 </div>
+               </div>
               </div>
             </div>
           </div>
