--- a/Coat Trick 2.1/index.html
+++ b/Coat Trick 2.1/index.html
@@ -102,10 +102,10 @@
             <div id="oferta" class="row g-0" >
               <div id="imgpromocao" class="col-md-4" >
                 <img src="https://http2.mlstatic.com/D_NQ_NP_679505-MLB50905241226_072022-W.webp" class="img-fluid rounded-start" 
-                alt="..." style="margin-top: 50px;">
+                alt="..." style="margin-top: 50px; margin: 10px;">
             </div>
               <div class="col-md-8">
-                <div class="card-body" style="margin-top: 50px; margin-left: 50px;">
+                <div class="card-body" style="margin-top: 50px; margin: 10px;">
                   <h1 class="card-title">Porque comprar um corta-vento?</h1>
                   <p id="textopromocao">Desde sempre, a principal característica do windbreaker é o fato de que ele protege contra os ventos fortes, amenizando as sensações térmicas nos dias mais frios. Além disso, alguns modelos são impermeáveis, fazendo com que os conjuntos corta vento ou peças avulsas sejam muito vistos nas regiões de praia. Isso porque ela não superaquece o corpo, podendo ser usada em regiões e ocasiões de frio ou temperaturas amenas.
 
