--- a/Coat Trick 2.1/catalogo.html
+++ b/Coat Trick 2.1/catalogo.html
@@ -183,13 +183,10 @@
                 <div class="col" style="margin-left: 10px;min-width: 180px;"class="rounded">
                     <div class="row">   
                         <div class="col" style="max-width:50px;margin: 5px;">
-                            <img href="#" id="redes" src="img/whatsapp.png" alt="">
+                            <a href="#"><img href="#" id="redes" src="img/whatsapp.png" alt=""></a>
                         </div>
                         <div class="col" style="max-width: 50px;margin: 5px;">
-                            <img href="#" id="redes" src="img/instagram.png" alt="">                        
-                        </div>
-                        <div class="col" style="max-width: 50px;margin: 5px;">
-                            <img href="#" id="redes" src="img/twitter.png" alt="">                       
+                            <a href="#"><img href="#" id="redes" src="img/instagram.png" alt=""></a>                        
                         </div>
                     </div>
                 
@@ -200,7 +197,6 @@
 
         </div>
     </div>
-
   
 
 
