--- a/Coat Trick 2.1/sobre.html
+++ b/Coat Trick 2.1/sobre.html
@@ -83,7 +83,7 @@
               <div class="col-md-8">
               
                 <div class= "coattrick">
-               <div class="card-body" style="margin-top: 50px; margin: px;">
+               <div class="card-body" style="margin-top: 50px; margin:px;">
                   <h1 class="card-title">O que é a Coat Trick?</h1>
                     <p >Não é só no verão que surgem as maiores tendências de moda. Durante o outono e inverno, várias criações ganham os holofotes, sejam novidades ou releituras de um modismo já existente. Com certeza, você já usou alguma peça ou estampa e se perguntou como ela foi criada, e em termos de roupas de frio como jaquetas, casacos ou blusas, uma peça está cada vez mais presente e, por isso, muita gente quer saber a origem dela.Estamos falando das peças corta vento ou windbreaker. Com textura versátil e diferenciada, esse tipo de roupa que produzimos na Coat Trick</p>
                 </div>
@@ -98,7 +98,7 @@
 
     <p class="p-5"></p>
 
-    <div style="background-color: #f3f3f3; width: 100%; color: #000000;" class="">
+    <div style="background-color: #f3f3f3; width: 100%; color: #000000; margin-top: 15%;" class="">
 
         <div class="container">
 
@@ -124,13 +124,10 @@
                 <div class="col" style="margin-left: 10px;min-width: 180px;"class="rounded">
                     <div class="row">   
                         <div class="col" style="max-width:50px;margin: 5px;">
-                            <img id="redes" href="#" src="img/whatsapp.png" alt="">
+                            <a href="#"><img href="#" id="redes" src="img/whatsapp.png" alt=""></a>
                         </div>
                         <div class="col" style="max-width: 50px;margin: 5px;">
-                            <img id="redes" href="#" src="img/instagram.png" alt="">                        
-                        </div>
-                        <div class="col" style="max-width: 50px;margin: 5px;">
-                            <img id="redes" href="#" src="img/twitter.png" alt="">                       
+                            <a href="#"><img href="#" id="redes" src="img/instagram.png" alt=""></a>                        
                         </div>
                     </div>
                 
@@ -141,7 +138,6 @@
 
         </div>
     </div>
-
 
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
