--- a/Coat Trick 2.1/index.html
+++ b/Coat Trick 2.1/index.html
@@ -50,7 +50,7 @@
 
                 </ul>
                 <form class="d-flex">                                    
-                    <a href="sobre.html">
+                    <a href="carrinho.html">
                     <img id="carrinho"  href="carrinho.html" src="img/shopping-bag.png" >
                     </a>                       
                     <button type="button" class="btn btn-outline-dark" href="#" data-bs-toggle="modal"
@@ -59,8 +59,6 @@
                     <button type="button" class="btn btn-outline-dark" href="#" data-bs-toggle="modal"
                     data-bs-target="#staticBackdrop">Cadastre-se
                     </button>
-                       
-                    
                 </form>
             </div>
         </div>
